- [ 1790292 ] NPE while scanning closed document

Version 2.0
- Updated pmd to version 4.0
- Requires NB6.0M9 or newer IDE build
- [ 1722116 ] pmd.scan.Scanner.run fails with Netbeans 6.0
- [ 1450727 ] PMD does not honour configured src file encoding

Version 1.9.1
- [ 1634131 ] Netbeans Plug-in and source level 1.6
- Removed dependency on Jakarta-ORO

Version 1.9
- Updated pmd to version 3.9

Version 1.8.1
- Now it is only tested with NB5.5 and development builds
- Reflecting changes in NB trunk (http://www.netbeans.org/issues/show_bug.cgi?id=87929)
- JDK1.5 or newer is required now
- Window state is persisted now
- F12/S-F12 works again

Version 1.8
- Updated pmd to version 3.8
- reported violations are displayed as a table

Version 1.7
- Updated pmd to version 3.7
- ignore R/O files in scanner (http://www.netbeans.org/issues/show_bug.cgi?id=72197)

Version 1.6
- Updated pmd to version 3.6

Version 1.5.1
- fixed some bugs 
  http://www.netbeans.org/issues/show_bug.cgi?id=72017
  http://www.netbeans.org/issues/show_bug.cgi?id=72215
  http://www.netbeans.org/issues/show_bug.cgi?id=72637
  http://www.netbeans.org/issues/show_bug.cgi?id=71141
  #1429406 - NoSuchMethodError while saving options
- reworked autoscan mode that rescan only active editor now
- few UI tweaks

Version 1.5
- Updated pmd to version 3.5
- Options customization updated to plug into new NetBeans 5.0 options dialog

Version 1.4
- Updated pmd to version 3.4

Version 1.3
- Updated pmd to version 3.3
- Works with IDE 5.0
- Modified action shortcut
- Progress now uses default NetBeans API
- Added few rules specific to NetBeans that can be selected

Version 1.2
- Updated pmd to version 3.2
- JDK 1.5 sources are recognized 
- Action icon is removed from menu 

Version 1.1
- Updated pmd to version 3.1
- The sources were updated to use new plugin development support planned 
  present in recent development builds of NetBeans

Version 1.0
- Updated pmd to version 2.1