@@ -1,0 +1,95 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head>
+        
+        <title>About PMD</title><link rel="stylesheet" href="nbdocs:/org/netbeans/modules/usersguide/ide.css" type="text/css">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head>
+    <body>
+        <h2>PMD for NetBeans</h2>
+        <p>
+            This is the integration of PMD into Netbeans.
+        </p>
+        <p>Read more about PMD:</p>
+        <object classid="java:org.netbeans.modules.javahelp.BrowserDisplayer">
+            <param name="content" value="http://pmd.sourceforge.net/">
+            <param name="text" value="&lt;html&gt;&lt;u&gt;PMD&lt;/u&gt;&lt;/html&gt;">
+            <param name="textFontSize" value="medium">
+            <param name="textColor" value="blue">
+        </object>
+        
+        <h2>Usage</h2>
+        <p>
+            Using PMD is quite simple, follow the steps:
+        </p>
+        <ul>
+            <li>Right click on one or more folders or Java files
+            </li>
+            <li>Choose <b>Tools|PMD</b>, and watch the tool
+                finding your flaws. 
+                <br>
+                The tool is also located under the global menu <b>Tools|Run PMD</b> 
+            </li>
+            <li>Open the output window <b>PMD Output</b>
+            </li>
+            <li>Double click on the error messages in the output pane to go to the line in the
+                Java source file to correct the problem PMD discovered.
+            </li>
+        </ul>
+        
+        <p>The following screen shot shows a typical PMD Output window:</p>
+        <img src="pmd-output-1.gif" alt="PMD Output">
+        
+        <p>The following screen shot shows an annotation (<img src="nbres:/pmd/resources/PMDOptionsSettingsIcon.gif" alt="PMD icon">)
+        created due to a problem detected by PMD:</p>
+        <img src="pmd-output-2.gif" alt="PMD Annotation">
+        
+        <h2>Options</h2>
+        <p>
+            PMD allows you to set several options.
+        </p>
+        
+        <p>You can open the PMD's options dialog by navigating to :
+        </p><ul>
+            <li>Goto <b>Tools|Options</b>
+            </li><li>Navigate to Miscellaneous section and expand PMD node
+        </li></ul>
+        <img src="pmd-options-1.gif" alt="PMD Options">
+        
+        <h3>Real time Scanning</h3>
+        <ul>
+            <li>Click on <b>Enable scan</b>
+            </li><li>Enter the number of seconds between each scan in the text field labeled as <b>Scan interval</b>
+        </li></ul>
+        <p>Note: NetBeans requires a restart to disable scanning.
+        </p>
+        
+        <h3>Rules</h3>
+        <ul>
+            <li>Click on <b>Manage rules ...</b>
+            </li><li>Select the different rules to see information and examples of the rule
+            </li><li>Use the <b>&lt;</b>, <b>&lt;&lt;</b>, <b>&gt;</b>, <b>&gt;&gt;</b> buttons to choose which rules to use.
+            </li><li>Press OK to save the configuration
+        </li></ul>
+        
+        <h3>Rule sets</h3>
+        <ul>
+            <li>Click on <b>Manage rulesets ...</b>
+            </li><li>Click <b>Add RuleSet</b> to locate the rule set xml file you want to include
+            </li><li>Click <b>Add Rule jar</b> to locate the jar containing the rules
+            </li><li>Check <b>Include PMD standard rules</b> to include the rules from the Pmd distribution
+            </li><li>Press OK to save the configuration
+            </li><li>Go to Rules to select the new rules.
+        </li></ul>
+        
+    <!--
+Tip: to create a link which will open in an external web browser, try:
+<object classid="java:org.netbeans.modules.javahelp.BrowserDisplayer">
+    <param name="content" value="http://www.netbeans.org/">
+    <param name="text" value="<html><u>http://www.netbeans.org/</u></html>">
+    <param name="textFontSize" value="medium">
+    <param name="textColor" value="blue">
+</object>
+To create a link to a help set from another module, you need to know the code name base and path, e.g.:
+<a href="nbdocs://org.netbeans.modules.usersguide/org/netbeans/modules/usersguide/configure/configure_options.html">Using the Options Window</a>
+(This link will behave sanely if that module is disabled or missing.)
+-->
+</body></html>
