@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE helpset PUBLIC "-//Sun Microsystems Inc.//DTD JavaHelp HelpSet Version 2.0//EN" "http://java.sun.com/products/javahelp/helpset_2_0.dtd">
+<helpset version="2.0">
+    <title>PMD Help</title>
+    <maps>
+        <homeID>pmd.about</homeID>
+        <mapref location="pmd-map.xml"/>
+    </maps>
+    <view mergetype="javax.help.AppendMerge">
+        <name>TOC</name>
+        <label>Table of Contents</label>
+        <type>javax.help.TOCView</type>
+        <data>pmd-toc.xml</data>
+    </view>
+    <view mergetype="javax.help.AppendMerge">
+        <name>Index</name>
+        <label>Index</label>
+        <type>javax.help.IndexView</type>
+        <data>pmd-idx.xml</data>
+    </view>
+    <view>
+        <name>Search</name>
+        <label>Search</label>
+        <type>javax.help.SearchView</type>
+        <data engine="com.sun.java.help.search.DefaultSearchEngine">JavaHelpSearch</data>
+    </view>
+</helpset>
