@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE filesystem PUBLIC "-//NetBeans//DTD Filesystem 1.1//EN" "http://www.netbeans.org/dtds/filesystem-1_1.dtd">
 <filesystem>
- <folder name="OptionsDialog">
+  <folder name="OptionsDialog">
      <folder name="Advanced">
          <attr name="FormEditor.instance/PmdOptionsPanel.instance" boolvalue="true"/>
             <file name="PmdOptionsPanel.instance">
              <attr name="instanceClass" stringvalue="pmd.config.ui.PmdOptionsPanel"/>
          </file>
      </folder>
- </folder>
+  </folder>
+  <folder name="Services">
+    <folder name="JavaHelp">
+      <file name="pmd-helpset.xml" url="pmd-helpset.xml"/>
+    </folder>
+  </folder>
     <folder name="Menu">
         <folder name="Window">
             <attr name="ResultWindowOpenAction.shadow/pmd-ShowOutputWindowAction.shadow" boolvalue="true"/>
