@@ -1,3 +1,4 @@
+- [ 1726614 ] javahelp added
 - [ 1790292 ] NPE while scanning closed document
 
 Version 2.0
